bug#31782 02_bug31782.diff In information_schema.files return extra row for tablespace itself. It has file_type TABLESPACE (not DATAFILE) to avoid breaking mysqldump and old user scripts.  Uses old patch attached to the bug#.